--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>net.technolords.micro.camel.DataHarvesterCamelContext</mainClass>
+                                    <mainClass>net.technolords.micro.camel.JolokiaMain</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
