--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
     </scm>
 
     <!--+
+        | License information
+        +-->
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
+
+
+
+    <!--+
         | Dependencies
         +-->
     <dependencies>
