Adapted maven lifecycle for sources and javadoc (now package) to ensure signing is done afterwards (verify)

--- a/pom.xml
+++ b/pom.xml
@@ -337,6 +337,7 @@
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>jar</goal>
                                 </goals>
@@ -352,7 +353,7 @@
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
-                                <phase>verify</phase>
+                                <phase>package</phase>
                                 <goals>
                                     <goal>jar-no-fork</goal>
                                 </goals>
